# Math-Powers

./: README.md  pyproject.toml
.github/workflows/: lint.yml
Math Power 2: Ghost Lockers/: ghost_lockers.py  printable.py  raw_data.csv  table.py
Math Power 4: Musician River/: main.py
Math Power 5: Witch Hats/: main.py
Math Power 7: Five Creatures/: main.py
Math Power 9: Riddle Poem/: main.py
